// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalBox Test 1`] = `
.pf-c-modal-box {
  display: block;
}

<div
  aria-describedby="modal-description"
  aria-label="test label"
  aria-modal="true"
  className="pf-c-modal-box"
  role="dialog"
>
  This is a ModalBox 
</div>
`;

exports[`ModalBox Test isLarge 1`] = `
.pf-c-modal-box.pf-m-lg {
  display: block;
}

<div
  aria-describedby="modal-description"
  aria-label="Test Modal label"
  aria-modal="true"
  className="pf-c-modal-box pf-m-lg"
  role="dialog"
>
  This is a ModalBox header
</div>
`;

exports[`ModalBox Test show 1`] = `
.pf-c-modal-box.pf-m-lg {
  display: block;
}

<div
  aria-describedby="modal-description"
  aria-label="Test Modal label"
  aria-modal="true"
  className="pf-c-modal-box pf-m-lg"
  role="dialog"
  show={true}
>
  This is a ModalBox header
</div>
`;
